<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" > -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         >

        <Button
            android:id="@+id/getIMEI"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/imei" />

        <Button
            android:id="@+id/getIMSI"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/imsi" />

        <Button
            android:id="@+id/getNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/number" />
        <Button
            android:id="@+id/hook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hookiphone" />
        <Button
            android:id="@+id/unhook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unhookiphone" />
        
        
         <Button
            android:id="@+id/notification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification" />
    </LinearLayout>